--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,3 +2,5 @@ PORT=4000
 DB_URL="mongodb://127.0.0.1:27017/Ecommerce"
  ACCESS_TOKEN_SECREAT=hdjdhdhjd
  ACCESS_TOKEN_EXPIRY=1d
+
+  REFRESH_TOKEN_SECREAT=hdjdLLLLLLLhdhjd
