--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,4 +3,7 @@ DB_URL="mongodb://127.0.0.1:27017/Ecommerce"
  ACCESS_TOKEN_SECREAT=hdjdhdhjd
  ACCESS_TOKEN_EXPIRY=1d
 
-  REFRESH_TOKEN_SECREAT=hdjdLLLLLLLhdhjd
+REFRESH_TOKEN_SECREAT=hdjdLLLLLLLhdhjd
+SMPT_SERVICE="gmail"
+SMPT_MAIL="svats803@gmail.com"
+SMPT_PASSWORD=""
