--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.6.5",
+    "browserify-zlib": "^0.2.0",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
