--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@redux-devtools/extension": "^3.3.0",
     "axios": "^1.6.5",
     "browserify-zlib": "^0.2.0",
+    "country-state-city": "^3.2.1",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
