--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.0.3",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.2",
+    "stripe": "^14.14.0",
     "validator": "^13.11.0"
   }
 }
