--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@redux-devtools/extension": "^3.3.0",
+    "@stripe/react-stripe-js": "^2.4.0",
     "axios": "^1.6.5",
     "browserify-zlib": "^0.2.0",
     "country-state-city": "^3.2.1",
@@ -43,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://10.51.5.145:4000"
+  "proxy": "http://192.168.29.30:4000"
 }
